Layout pronto utilizando LinearLayout

--- a/GastodeViagem/app/src/main/res/values/strings.xml
+++ b/GastodeViagem/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="preco_por_litro">Preço por Litro</string>
     <string name="autonomia">Autonomia</string>
     <string name="kms_por_litro">Kms por litro</string>
+    <string name="gasto_total">Seu gasto total será de:</string>
+    <string name="btn_calcular">Calcular</string>
+    <string name="valor_final">R$ 0</string>
 </resources>
